third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/copy_loc_borrowed_field_invalid.no-opt.exp

Diagnostics:
error: cannot copy local `x` which is still mutably borrowed
  ┌─ tests/reference-safety/v1-borrow-tests/copy_loc_borrowed_field_invalid.move:7:9
  │
6 │         let r1 = &mut x.f;
  │                  -------- field `f` via local `x` previously mutably borrowed here
7 │         copy x;
  │         ^^^^^^ copy attempted here
8 │         r1;
  │         -- conflicting reference `r1` used here
